--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body {
     width: 100%;
     height: 100vh;
-    background-image: url('/images/background.jpeg'); 
+    background-image: url('/Easybus-ticketBooking/images/background.jpeg'); 
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
